frontend/caddy/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-web-analyzer-gui
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    name: green-web-analyzer-gui
spec:
  tls:
    - secretName: green-web-analyzer-tls
      hosts:
      - green-web-analyzer.eu
    
  rules:
  - host: green-web-analyzer.eu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: green-web-analyzer-gui
            port: 
              number: 8080
