frontend/caddy/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-web-analyzer-gui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: green-web-analyzer-gui
  template:
    metadata:
      labels:
        app: green-web-analyzer-gui
    spec:
      containers:
      - name: green-web-analyzer-gui
        image: patr1ick/green-web-analyzer-gui:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "32m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: green-web-analyzer-gui
spec:
  selector:
    app: green-web-analyzer-gui
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: green-web-analyzer-gui
spec:
  podSelector:
    matchLabels:
      app: green-web-analyzer-gui
  ingress:
    - ports:
        - port: 8080
          protocol: TCP
